--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,10 @@
     <string name="app_name">Simply</string>
 
     <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_show_contacts">Show contacts</string>
     <string name="title_activity_contacts">Contacts</string>
     <string name="no_contacts">There are no contacts to display.</string>
+    <string name="action_search">Search</string>
+    <string name="action_sort_by">Sort by</string>
+    <string name="action_import_export">Import / Export</string>
 </resources>
