--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,9 +3,16 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_show_contacts">Show contacts</string>
-    <string name="title_activity_contacts">Contacts</string>
+    <string name="title_activity_contacts">SIM PLY</string>
     <string name="no_contacts">There are no contacts to display.</string>
     <string name="action_search">Search</string>
     <string name="action_sort_by">Sort by</string>
     <string name="action_import_export">Import / Export</string>
+    <string name="title_activity_add_contact">SIM PLY</string>
+    <string name="action_settings">Settings</string>
+    <string name="title_activity_show_contacts">SIM PLY</string>
+    <string name="title_activity_sort_by">SIM PLY</string>
+    <string name="title_activity_import_export_contact">SIM PLY</string>
+    <string name="title_activity_edit_contact">SIM PLY</string>
+    <string name="search_hint">Find Contact</string>
 </resources>
