--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,11 +11,13 @@
     <string name="title_activity_add_contact">SIM PLY</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_show_contacts">SIM PLY</string>
-    <string name="title_activity_sort_by">SIM PLY</string>
+    <string name="title_activity_sort_by">Sort by</string>
     <string name="title_activity_import_export_contact">SIM PLY</string>
     <string name="title_activity_edit_contact">SIM PLY</string>
     <string name="search_hint">Find Contact</string>
     <string name="add_contact_name">Name</string>
     <string name="add_contact_surname">Surname</string>
     <string name="add_contact_telephone">Telephone</string>
+    <string name="radio_button_first">Name</string>
+    <string name="radio_button_second">Surname</string>
 </resources>
