--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
     <string name="contact_to_display_sim">SIM</string>
     <string name="contact_to_display_both">Both</string>
     <string name="menu_deleteAll">Delete All</string>
+    <string name="sim_not_available">SIM not available.</string>
 </resources>
